# news-to-signal

./: .env.example  .gitignore  LICENSE  README.md  cli.py  collect_real_data.py  config.py  cross_project_conventions.md  pyproject.toml  requirements.txt  run_phase1.py
artifacts/runs/: README.md
configs/: baseline.yaml  data.yaml  experiment.yaml  features.yaml
notebook/: README.md
notebooks/: README.md  case_study.ipynb
reports/: README.md
src/: kaggle_integration.py  yahoo_enhanced.py
src/data/: __init__.py  preprocess.py
src/features/: __init__.py  engineering.py
src/labels/: __init__.py
src/models/: __init__.py  signal_builder.py
src/pipelines/: __init__.py  phase1_pipeline.py  run_plan.py
src/utils/: __init__.py  configuration.py  experiment.py  signal_schema.py
src/validation/: __init__.py  evaluation.py
tests/: conftest.py  test_config.py  test_signal_schema.py
